objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c.object
<CustomObject>
    <description>This object is used to configure the relationship loan to value calculation.</description>
    <fields>
        <fullName>LLC_BI__Borrower_Type__c</fullName>
        <description>Administrators populate this multi-select picklist with the borrower type(s) whose collateral they want to include in the RLTV calculation.</description>
        <inlineHelpText>Select the borrower type(s) whose collateral you want to include in the RLTV calculation.</inlineHelpText>
        <label>Borrower Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Limited Guarantor</fullName>
                </value>
                <value>
                    <fullName>Co-Borrower</fullName>
                </value>
                <value>
                    <fullName>Related Entity</fullName>
                </value>
                <value>
                    <fullName>Grantor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Association__c</fullName>
        <description>Administrators populate this multi-select picklist with the collateral association(s) to filter for collateral to include in the RLTV calculation.</description>
        <inlineHelpText>Select the collateral association(s) to filter for the collateral you want to include in the RLTV calculation.</inlineHelpText>
        <label>Collateral Association</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                    <default>true</default>
                    <label>Owner</label>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Lessee</fullName>
                </value>
                <value>
                    <fullName>Lessor</fullName>
                </value>
                <value>
                    <fullName>Lienholder</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Assignee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Value_Field__c</fullName>
        <description>The administrator populates this required field with the field API name of the collateral value that is used in the relationship loan to value calculation.</description>
        <inlineHelpText>Enter the API name of the field on the Collateral Mgmt object that contains the collateral value you want to use in the relationship loan to value calculation.</inlineHelpText>
        <label>Collateral Value Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exposure_Value_Field__c</fullName>
        <description>The administrator populates this required field with the field API name of the relationship’s exposure value that is used in the relationship loan to value calculation.</description>
        <inlineHelpText>Enter the API name of the field on the Relationship object that contains the exposure value you want to use in the relationship loan to value calculation.</inlineHelpText>
        <label>Exposure Value Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The administrator selects this checkbox to activate the calculation.</description>
        <inlineHelpText>Select this checkbox to activate the relationship loan to value calculation.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RLTV_Calculated_Value_Field__c</fullName>
        <description>The administrator populates this required field with the API name of the field on the Relationship Loan to Value Calculation object where they want the relationship LTV calculated value to populate.</description>
        <inlineHelpText>Enter the API name of the field on the Relationship Loan to Value Calculation object where you want the relationship LTV calculated value to populate.</inlineHelpText>
        <label>RLTV Calculated Value Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>Administrators populate this multi-select picklist with the loan stage(s) to filter for loans to include in the RLTV calculation.</description>
        <inlineHelpText>Select the loan stage(s) to filter for the loans you want to include in the RLTV calculation.</inlineHelpText>
        <label>Stage</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Credit Underwriting</fullName>
                </value>
                <value>
                    <fullName>Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Closed Funded</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>Administrators populate this multi-select picklist with the loan status(es) to filter for loans to include in the RLTV calculation.</description>
        <inlineHelpText>Select the loan status(es) to filter for the loans you want to include in the RLTV calculation.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Paid Out</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Charge-Off</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship Loan to Value Calc Config</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Loan to Value Calc Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>